--- a/gb/14/8/8/n4219857.md
+++ b/gb/14/8/8/n4219857.md
@@ -1,13 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aopcrh390/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aopcrh390/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aopcrh390/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aopcrh390/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aopcrh390/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aopcrh390/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aopcrh390/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aopcrh390/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>返校季 细数美国提供教师折扣的商家</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/08/1408071601572235-600x400.jpg" />
-<h6>返校季购物。 (Tim Boyle/Getty Images)
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2014年08月08日讯】（大纪元记者姬承羲美国新泽西综合报导）<ahref="https://github.com/aopcrh390/djy/blob/master/gb/tag/%E8%BF%94%E6%A0%A1.md#1">返校</a>季即将开始，许多书店、电子商店和<ahref="https://github.com/aopcrh390/djy/blob/master/gb/tag/%E6%96%87%E5%85%B7.md#1">文具</a>店都开始提供学生优惠。不过，辛勤耕耘的老师也没有被遗忘，很多商家甚至常年为教师（从幼儿园教师到大学教授）提供折扣，它们包括服装店、文具店、电脑商店等等。不过，不同商家的折扣大小随着地域、网络或实体店、时间等因素而变化，购买前请与销售员确认，或在网上输入“店名 + teacher discount”来查询。下面就让我们来看看都有哪些商家提供教师折扣。</p>
-<p>根据一家教育倡议网站Edutopia搜集的最新资讯，有8个连锁服装店提供教师折扣，折扣的范围在15%至20%。这些商家包括Ann Taylor、 LOFT、The Limited、Banana Republic、New York &#038; Company、J. Crew、J. Jill（仅限实体店）、Talbots和Aerosoles。老师们可以在网店或者实体店（零售店或工厂店，每个商家有不同的限制）结账时，告诉销售员自己是教师并且出示教师ID，就可以获得折扣。<br />　　<br />另外，许多<ahref="https://github.com/aopcrh390/djy/blob/master/gb/tag/%E6%96%87%E5%85%B7.md#1">文具</a>店都提供教师折扣，有些需要老师们在网站上登入以获得优惠券，其他一些则需要老师们出示工作证明来获得折扣或者免税。这些商家包括OfficeMax（每购物75美元返10美元）、STAPLES（5%回扣及免费邮寄）、FedEx Office、The Home Depot，以及连锁书店Barnes &#038; Noble（20 – 25%折扣）。还有很多电子产品店也都为教师或学生提供特价产品，它们包括Apple Store、Dell、HP、Best Buy等等。</p>
+	<p>【大纪元2014年08月08日讯】（大纪元记者姬承羲美国新泽西综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%BF%94%E6%A0%A1.md#1">返校</a>季即将开始，许多书店、电子商店和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%87%E5%85%B7.md#1">文具</a>店都开始提供学生优惠。不过，辛勤耕耘的老师也没有被遗忘，很多商家甚至常年为教师（从幼儿园教师到大学教授）提供折扣，它们包括服装店、文具店、电脑商店等等。不过，不同商家的折扣大小随着地域、网络或实体店、时间等因素而变化，购买前请与销售员确认，或在网上输入“店名 + teacher discount”来查询。下面就让我们来看看都有哪些商家提供教师折扣。</p>
+<p>根据一家教育倡议网站Edutopia搜集的最新资讯，有8个连锁服装店提供教师折扣，折扣的范围在15%至20%。这些商家包括Ann Taylor、 LOFT、The Limited、Banana Republic、New York &#038; Company、J. Crew、J. Jill（仅限实体店）、Talbots和Aerosoles。老师们可以在网店或者实体店（零售店或工厂店，每个商家有不同的限制）结账时，告诉销售员自己是教师并且出示教师ID，就可以获得折扣。<br />　　<br />另外，许多<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%87%E5%85%B7.md#1">文具</a>店都提供教师折扣，有些需要老师们在网站上登入以获得优惠券，其他一些则需要老师们出示工作证明来获得折扣或者免税。这些商家包括OfficeMax（每购物75美元返10美元）、STAPLES（5%回扣及免费邮寄）、FedEx Office、The Home Depot，以及连锁书店Barnes &#038; Noble（20 – 25%折扣）。还有很多电子产品店也都为教师或学生提供特价产品，它们包括Apple Store、Dell、HP、Best Buy等等。</p>
 <p>很多时候，在结账或者网络购物时，简单询问一下是否有教师折扣，常常能获得想不到的惊喜哦。记住，这样的特权不仅仅属于学生，还有辛勤教导学生的老师们！◇</p>
 <p>（责任编辑：韩净）</p>
 	
@@ -15,36 +14,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/14/n12256162.md#1">“窗口”式工作方式在疫情期间盛行</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12253594.md#1">【新泽西7.13】取消人数限制 捷运恢复运营</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/11/n12249472.md#1">疫情重创下 新泽西州欲借贷百亿防裁员</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/10/n12247826.md#1">【新泽西疫情7.11】州长颁令 户外必须戴口罩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686781.md#1">新州简讯：Dunkin在新泽西开首家数字咖啡店</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686979.md#1">因申请信息公开 新泽西州82岁老妇被市府起诉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686676.md#1">发展再生能源 新泽西仅存两家燃煤发电厂将关闭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677133.md#1">新泽西法轮功参加圣派翠克节游行 获市长盛赞</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/16/n8107028.md#1" target="_blank">澳洲出新书 探究法轮功健身奇效背后奥秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12253624.md#1">陆媒称三峡大坝已尽力 黄万里之子揭设计缺陷</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/14/n12255093.md#1">中共称制裁美国军火商遭耻笑 ：从不卖给你</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/14/n12254741.md#1">60万港人投票震惊北京 中联办恫吓“违法”</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/14/n12253884.md#1">【最新疫情7.14】第十位美国会议员染疫</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/2/n12228522.md#1">红二代：别觉得可栽赃在川普身上 你栽不了</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12252432.md#1">妻乳癌逝享年57岁 约翰?屈伏塔发文悼念</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/14/n12255956.md#1">孙俪晒与同父异母妹妹合照 网友赞姐妹神似</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12253613.md#1">靠药物控制情绪 金马影后马思纯被传停工治病</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/15/n12256897.md#1">蔡阿嘎拒舔共少赚百万  叹艺人不敢得罪中共</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/12/n12249941.md#1">中国第一坝三门峡大坝悲歌 为何坝成即祸出？</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12252460.md#1">海拔二千多公尺 世界最危险教堂盖在峭壁上</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12251672.md#1">天人感应  末世大地震预兆亡国的历史记载</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/9/n12242996.md#1">【涛哥侃封神】第一回 纣王女娲宫进香（上）</a></li>
-<li><a href="https://github.com/aopcrh390/djy/blob/master/gb/20/7/13/n12252971.md#1">一场致命车祸 小莲花让他化险为夷</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aopcrh390/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aopcrh390/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/8/8/n4219857.htm">返校季 细数美国提供教师折扣的商家</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/8/8/n4219857.htm">返校季 细数美国提供教师折扣的商家</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aopcrh390/djy/blob/master/gb/14/8/8/n4219857.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aopcrh390/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aopcrh390/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aopcrh390/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aopcrh390/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aopcrh390/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/8/8/n4219857.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
